# Tamil-Translate

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
Documentations/: CLAUDE.md  Language Detection API.md  Language Detection.md  Mayura.md  Models.md  Overview.md  Pricing.md  Quickstart.md  Sarvam Translate.md  Translate Tutorial.md  Translation API.md  Translation.md  Transliteration API.md  Transliteration.md
fonts/: README.md
scripts/: download_fonts.py
src/tamil_translate/: __init__.py  cli.py  config.py  ocr_engine.py  pdf_generator.py  pipeline.py  security.py  state_manager.py  translator.py
src/tamil_translate/tui/: __init__.py  app.py  styles.tcss
src/tamil_translate/tui/screens/: __init__.py  browser.py  dashboard.py  help.py  history.py  processing.py  results.py  settings.py
src/tamil_translate/tui/widgets/: __init__.py
