[project]
name = "tamil-translate"
version = "0.1.0"
description = "Sanskrit/Hindi PDF translation to English and Tamil using PaddleOCR and Sarvam AI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Sangeeth Sivan"}
]
keywords = ["translation", "sanskrit", "tamil", "ocr", "pdf", "sarvam-ai"]

dependencies = [
    "sarvamai>=0.1.0",
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.5.0",
    "fpdf2>=2.7.0",
    "PyPDF2>=3.0.0",
    "python-magic>=0.4.27",
    "Pillow>=10.0.0",
    "tqdm>=4.66.0",
    "pdf2image>=1.16.0",
]

[project.scripts]
tamil-translate = "tamil_translate.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
